# yogadrishti

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: pipeline.py
backend/app/api/endpoints/: analyze_image.py  analyze_video.py  health.py  jobs.py  users.py
backend/app/core/feedback_generation/: fallback_templates.py  gemini_client.py  history_comparison.py  prompt_builder.py  response_parser.py
backend/app/core/pose_detection/: classifier.py  landmarks_schema.py  mediapipe_runner.py  person_gate.py
backend/app/core/pose_evaluation/: confidence_gate.py  pose_registry.py
backend/app/db/: database.py  queries.py
backend/app/models/: api_schemas.py  domain_schemas.py
backend/app/services/image_processing/: decode.py
backend/app/services/video_processing/: aggregate.py  sampler.py
backend/app/tests/: conftest.py
backend/app/tests/integration_tests/: test_api.py
backend/app/tests/unit_tests/: test_alignment.py  test_angles.py  test_confidence_gate.py  test_fallback_templates.py  test_history_comparison.py  test_prompt_builder.py  test_scoring.py  test_validation.py
backend/app/utils/: exceptions.py  file_io.py  logging.py  validation.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: FileUpload.jsx  Navbar.jsx  PoseHistory.jsx  ResultCard.jsx  UserSelector.jsx
frontend/src/services/: api.js
