[project]
name = "yoga-pose-detector"
version = "1.0.0"
description = "AI-powered yoga pose detection and posture feedback system"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
    "opencv-python-headless>=4.8.0",
    "mediapipe>=0.10.0",
    "google-genai>=1.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "aiofiles>=23.0",
    "httpx>=0.27.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
